--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Visualization
     License :: OSI Approved :: BSD License
 description = A viewer for small multiples
-version = 1.0
+version = 1.0.1
 
 [options]
 zip_safe = False
@@ -22,8 +22,8 @@ packages = find:
 python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
-    glueviz
-    
+    numpy
+
 [options.entry_points]
 glue.plugins =
     glue_small_multiples = glue_small_multiples:setup
