--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
+[project]
+name = "glue-small-multiples"
+version = "1.0.1"
+
+
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
-testpaths = [
-    "tests",
-]
