--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
     Topic :: Scientific/Engineering :: Visualization
     License :: OSI Approved :: BSD License
 description = A viewer for small multiples
-version = 1.0.1
+long_description = file: README.md
 
 [options]
 zip_safe = False
@@ -22,7 +22,7 @@ packages = find:
 python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
-    numpy
+    glue-core>=1.6
 
 [options.entry_points]
 glue.plugins =
