--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifiers =
     License :: OSI Approved :: BSD License
 description = A viewer for small multiples
 long_description = file: README.md
+long_description_content_type= text/markdown
 
 [options]
 zip_safe = False
