--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ extras =
     test: test
 commands =
     test: pip freeze
-    test: pytest --pyargs glue_small_multiples {posargs}
+    test: pytest glue_small_multiples
 
 [testenv:codestyle]
 deps = flake8
