--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{38,39,310,311}-{test}-{dev}{,-pyqt6}
+    py{38,311}-{test}-{dev}{,-pyqt6}
     codestyle
 requires = pip >= 18.0
            setuptools >= 30.3.0
@@ -14,12 +14,14 @@ changedir =
 deps =
     !pyqt6: PyQt5==5.15.*
     pyqt6: PyQt6==6.4.*
+    pyqt6: pyqt6-qt6<6.5
     dev: glue-core @ git+https://github.com/glue-viz/glue
+    test: glue-core @ git+https://github.com/glue-viz/glue
 extras =
     test: test
 commands =
     test: pip freeze
-    test: pytest glue_small_multiples
+    test: python -m pytest glue_small_multiples
 
 [testenv:codestyle]
 deps = flake8
