More tox changes

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     pyqt6: pyqt6-qt6<6.5
     dev: glue-core @ git+https://github.com/glue-viz/glue
     test: glue-core @ git+https://github.com/glue-viz/glue
+    all: pytest
 extras =
     test: test
 commands =
