More tox changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,5 +27,14 @@ setup_requires = setuptools_scm
 glue.plugins =
     glue_small_multiples = glue_small_multiples:setup
 
+[options.extras_require]
+test =
+    pytest
+    pytest-qt
+    pytest-faulthandler
+    mock
+qt =
+    PyQt5>=5.9
+
 [options.package_data]
 * = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
