--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ extras =
     test: test
 commands =
     test: pip freeze
-    test: python -m pytest glue_small_multiples
+    test: pytest --pyargs glue_small_multiples {posargs}
 
 [testenv:codestyle]
 deps = flake8
