Make sure glue is included in the publish action

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,8 @@ test =
     mock
 qt =
     PyQt5>=5.9
+glue = 
+    glue-core
 
 [options.package_data]
 * = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
