Set up CI and automated release (#39)
* Set up CI

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,10 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering :: Visualization
     License :: OSI Approved :: BSD License
 description = A viewer for small multiples
@@ -20,12 +21,23 @@ long_description_content_type= text/markdown
 [options]
 zip_safe = False
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.8
 setup_requires = setuptools_scm
 
 [options.entry_points]
 glue.plugins =
     glue_small_multiples = glue_small_multiples:setup
+
+[options.extras_require]
+test =
+    pytest
+    pytest-qt
+    pytest-faulthandler
+    mock
+qt =
+    PyQt5>=5.9
+glue = 
+    glue-core
 
 [options.package_data]
 * = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
