--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -4,13 +4,9 @@ on:
   push:
     branches:
     - main
-    - dev
     tags:
     - '*'
   pull_request:
-    branches:
-    - main
-    - dev
 
 jobs:
   initial_checks:
@@ -27,6 +23,7 @@ jobs:
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/tox.yml@v1
     with:
       display: true
+      coverage: false
       # Linux PyQt 5.15 and 6.x installations require apt-getting xcb and EGL deps
       # and headless X11 display
       libraries: |
@@ -38,7 +35,6 @@ jobs:
       envs: |
         # Standard tests
         - linux: py38-test
-        - linux: py39-test
         - linux: py310-test-pyqt6
         - linux: py311-test-dev-pyqt6
 
@@ -56,7 +52,7 @@ jobs:
     with:
       # Setup PyQt5 deps and headless X server as per pyvista/setup-headless-display-action@v1
       libraries: '^libxcb.*-dev libxkbcommon-x11-dev xvfb'
-      test_extras: 'test,qt'
+      test_extras: 'test,qt,glue'
       test_command: Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 & sleep 3; DISPLAY=:99.0 pytest --pyargs glue_small_multiples
     secrets:
       pypi_token: ${{ secrets.pypi_token }}s
