Update to reflect the glue->glue-core and glue-qt split

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,10 +34,13 @@ test =
     pytest-qt
     pytest-faulthandler
     mock
-qt =
+qt5 =
     PyQt5>=5.9
+qt6 =
+    PyQt6
 glue = 
     glue-core
+    glue-qt
 
 [options.package_data]
 * = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
