--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -31,6 +31,10 @@ jobs:
           - '^libxcb.*-dev'
           - libxkbcommon-x11-dev
           - libegl1-mesa
+          - libopenblas-dev
+          - libhdf5-dev
+        brew:
+          - enchant
 
       envs: |
         # Standard tests
@@ -49,10 +53,5 @@ jobs:
   publish:
     needs: tests
     uses: OpenAstronomy/github-actions-workflows/.github/workflows/publish_pure_python.yml@v1
-    with:
-      # Setup PyQt5 deps and headless X server as per pyvista/setup-headless-display-action@v1
-      libraries: '^libxcb.*-dev libxkbcommon-x11-dev xvfb'
-      test_extras: 'test,qt,glue'
-      test_command: Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 & sleep 3; DISPLAY=:99.0 pytest --pyargs glue_small_multiples
     secrets:
       pypi_token: ${{ secrets.pypi_api_token }}
