--- a/.github/workflows/ci_workflows.yml
+++ b/.github/workflows/ci_workflows.yml
@@ -37,16 +37,12 @@ jobs:
 
       envs: |
         # Standard tests
-        - linux: py38-test
         - linux: py310-test-pyqt6
         - linux: py311-test-dev-pyqt6
 
-        - macos: py38-test
-        - macos: py39-test-dev
         - macos: py310-test-pyqt6
+        - macos: py311-test-pyqt6
 
-        - windows: py38-test
-        - windows: py39-test-dev
         - windows: py310-test-pyqt6
 
   publish:
